# AIWolfNLAgentPython

./: .execute.sh  .gitignore  LICENSE  README.md  check_gpi.py  connect_to_server.py  execute_pre.sh  main.py  multiprocess.py  pre_connection.py  pyproject.toml  ruff.toml
.old/: README.md.old
lib/: __init__.py  client.py  connection.py  log.py  pre_connection.py  server.py  util.py
lib/AIWolf/: commands.py
lib/AIWolf/pre/: connect_to_server.py
player/: __init__.py  agent.py  possessed.py  seer.py  villager.py  werewolf.py
player_openai/: __init__.py  agent.py  colour_scale.py  coming_out.py  info_types.py  langchain.py  my_tactics.py  possessed.py  seer.py  stance.py  strategies.py  villager.py  werewolf.py
player_openai/dev_functions/: log.py
player_openai/dev_functions/logs/: agent_2_log.txt  agent_3_log.txt  agent_4_log.txt  agent_5_log.txt  talk_history_log.txt
player_openai/functions/: generate_statement.py  get_colour_scale.py  get_coming_outs.py  get_stance.py  get_tactic.py
res/: Commands.py  __init__.py  config.ini  config.ini.example  config.ini.sample  log.ini.sample  requirements.txt  ssh-config  ssh-config.sample  ssh-config.save
src/: infinite.sh  main.py  multi.py
src/lib/: log.py  util.py
src/player/: agent.py  possessed.py  seer.py  villager.py  werewolf.py
src/res/: config.ini.example  config.ini.sample  log.ini.example
src/utils/: __init__.py  agent_log.py  agent_util.py  log.py  log_info.py
