[project]
name = "aiwolf-nlp-agent"
version = "0.1.0"
description = "aiwolf-nlp-agent"
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
dependencies = ["aiwolf-nlp-common>=0.2.0", "timeout-decorator == 0.5.0"]
authors = [{ name = "aiwolf", email = "aiwolf@kanolab.net" }]
maintainers = [{ name = "aiwolf", email = "aiwolf@kanolab.net" }]
keywords = ["aiwolf"]

[project.urls]
Homepage = "https://aiwolf.org"
