[project]
name = "aiwolf-nlp-agent"
version = "0.2.1"
description = "aiwolf-nlp-agent"
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["aiwolf-nlp-common==0.3.5"]
authors = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
maintainers = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
keywords = ["aiwolf"]

[project.urls]
Homepage = "https://aiwolf.org"
